--- a/.project
+++ b/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>keno</name>
+	<name>cohort-2-final-problem-3</name>
 	<comment></comment>
 	<projects>
 	</projects>
